--- a/tools.html
+++ b/tools.html
@@ -95,20 +95,20 @@
 
     <div class="tool">
       <h2>🐍 Packet Sniffer Python</h2>
-      <p>Script simple en Python pour écouter le trafic sur ton interface réseau (socket + raw packet).</p>
-      <a href="https://github.com/Sreeram-23/Packet-Sniffer" target="_blank">🔗 GitHub</a>
+      <p>Script Python pour capturer les paquets réseau en temps réel via sockets brutes.</p>
+      <a href="https://github.com/Sreeram-23/Packet-Sniffer" target="_blank">🔗 Voir sur GitHub</a>
     </div>
 
     <div class="tool">
       <h2>🧾 Analyseur de logs Apache</h2>
-      <p>Script qui trie, extrait et met en forme les logs Apache pour détecter des requêtes suspectes.</p>
+      <p>Script pour analyser les logs Apache et détecter les requêtes suspectes ou malveillantes.</p>
       <a href="https://github.com/EkoLabs/apache-log-analyzer" target="_blank">🔗 Télécharger</a>
     </div>
 
     <div class="tool">
       <h2>🔐 Générateur & Vérifieur MD5</h2>
-      <p>Interface CLI pour hasher un mot ou vérifier une signature MD5 rapidement depuis un terminal local.</p>
-      <a href="https://github.com/ricardojoserf/MD5-Encryptor" target="_blank">🔗 Voir le code</a>
+      <p>Outil CLI pour générer ou comparer des empreintes MD5 à partir de chaînes ou fichiers.</p>
+      <a href="https://github.com/ricardojoserf/MD5-Encryptor" target="_blank">🔗 Code source</a>
     </div>
 
   </div>
