--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       <a href="academy.html" class="btn">🎓 Explorer les formations</a>
       <a href="tools.html" class="btn">🧰 Accéder aux outils</a>
       <a href="services.html" class="btn">🔐 Demander un audit</a>
+    <a href="store.html" class="btn">🛒 Accéder à la boutique</a>
     </div>
-
     <div class="footer">
       Créé par GAZO — Cybersécurité & Fiction Numérique ©
     </div>
