--- a/store.html
+++ b/store.html
@@ -112,6 +112,14 @@
       <a href="https://github.com/morganegautier/osint-starter" class="buy-btn" target="_blank">📂 Télécharger sur GitHub</a>
     </div>
 
+    <div class="product">
+      <h2>📲 Paiement direct via MTN CI</h2>
+      <p><strong>Numéro:</strong> +225 0544 89 90 74</p>
+      <p><strong>Nom:</strong> GAZO</p>
+      <p>Fais le transfert via Mobile Money, puis envoie ta preuve de paiement à <code>gazo.shield@proton.me</code></p>
+      <p>Après validation, tu recevras ton contenu en téléchargement 💾</p>
+    </div>
+
   </div>
 
   <a href="index.html" class="back">⟵ Retour à l’accueil</a>
